eidiko-chatbot-pratik/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eidiko-chatbot
spec:
  selector:
    app: eidiko-chatbot
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  type: ClusterIP
