eidiko-chatbot-pratik/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eidiko-chatbot
spec:
  to:
    kind: Service
    name: eidiko-chatbot
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
